# vmir

./: .gitignore  CMakeLists.txt
src/: logger.h  main.cpp  vmir.c  vmir.h  vmir_bitcode_instr.c  vmir_bitcode_parser.c  vmir_bitstream.c  vmir_function.c  vmir_instr.c  vmir_jit_arm.c  vmir_lib.cpp  vmir_lib.h  vmir_libc.c  vmir_mem.c  vmir_support.c  vmir_transform.c  vmir_type.c  vmir_value.c  vmir_vm.c  vmir_vm.h  vmir_wasm_parser.c
